--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
 }
 
 .btn-hover {
-  border: 2px solid #ff96ad
+  border: 2px solid white;
+  background-color: white;
 }
 
 .buttonList {
@@ -79,11 +80,12 @@ h1 {
   text-align: center;
   border: 2px solid #f3b358;
 
+  text-shadow: black -1px 1px 2px
 }
 
 h2 {
   font-size: 30px;
-  text-shadow: black -1px 1px 2px
+  text-shadow: black -1px 1px 2px;
 }
 
 p {
