--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 }
 
 .buttonList {
+  display: inline-block;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -90,6 +91,7 @@ h2 {
 
 p {
   margin-left: 5px;
+  font-size: 18px;
 }
 
 a:hover {
